# multi-agent-data-engineering-swarm

./: .env.example  .gitignore  .project.toml  CLAUDE.md  Makefile  OpenCode.md  README.md  config.py  debug_clean.py  graph.py  main.py  output.json  pyproject.toml  test_direct.py  test_feedback_loop.py  test_mcp.py
.opencode/: opencode.db-shm  opencode.db-wal
agents/: cleaner.py  data_ingestor.py  gap_resolver.py  prompt_engineer.py  transformer.py  validator.py
data/: sales_data.csv
docs/: architecture-diagram.md  architecture.md  experimentation.md  mcp-integration.md  whitepaper.md
indexes/cleaning_rules/: chroma.sqlite3
indexes/schemas/: chroma.sqlite3
indexes/transform_rules/: chroma.sqlite3
logs/: pipeline_20250723_160840.json  pipeline_20250723_161238.json  pipeline_20250723_163616.json  pipeline_20250724_123711.json
scripts/: mcp-server.sh  mcp_client_probe.py  test_chroma_import.py
tests/: test_cleaner.py  test_cleaner_simple.py  test_config.py  test_data_tools.py  test_graph.py  test_simple.py  test_transformer.py
tools/: __init__.py  data_tools.py  data_validator.py
utils/: generate_sales_data.py
