[project]
name = "multi-agent-data-engineering-swarm"
version = "0.1.0"
description = "A multi-agent swarm system for automated data engineering pipelines using LangChain and various LLM providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.5",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langchain-xai>=0.2.4",
    "langgraph>=0.5.4",
    "mcp[cli]>=1.12.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "structlog>=25.4.0",
]

[project.scripts]
# Development scripts
start-mcp-server = "tools.data_tools:main"
run-pipeline = "main:main"

[tool.pytest.ini_options]
# Add the project root to Python path so imports work correctly
pythonpath = [
    "."
]
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Async support (requires pytest-asyncio)
asyncio_mode = "auto"
# Show local variables in tracebacks
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
# Define custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
